--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     .badge { display:inline-block; vertical-align:middle; }
   </style>
 
-  <script defer data-domain="JoostdeWinter.github.io" src="https://plausible.io/js/script.js"></script>
+  <script defer data-domain="joostdewinter.github.io" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <div class="app">
@@ -56,7 +56,7 @@
       <p class="cite">
         <span>Citation: J. C. F. de Winter. Pearson r — Confidence Intervals. </span>
         <img class="badge" alt="views"
-             src="https://hits.sh/JoostdeWinter.github.io/pearson-r-ci.svg?label=views">
+             src="https://hits.sh/joostdewinter.github.io/pearson-r-ci.svg?label=views">
       </p>
     </header>
 
@@ -303,3 +303,4 @@
   </script>
 </body>
 </html>
+
