--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         The smaller panel shows the familiar Fisher z large-sample approximation for comparison.
       </p>
       <p class="cite">
-        <span>Citation: J. C. F. de Winter. Pearson r — Confidence Intervals. </span>
+        <span>Citation: De Winter, J. C. F. (2025). Pearson r — confidence intervals [Web application]. https://joostdewinter.github.io/pearson-r-ci/ </span>
         <img class="badge" alt="views"
              src="https://hits.sh/joostdewinter.github.io/pearson-r-ci.svg?label=views">
       </p>
@@ -303,4 +303,5 @@
   </script>
 </body>
 </html>
+
 
