--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
       <div class="controls">
         <div>
           <label for="r">Sample correlation r (−1 &lt; r &lt; 1)</label>
-          <input id="r" type="number" step="0.0001" value="0.42" placeholder="e.g., 0.42" />
+<input id="r"
+       type="text"
+       inputmode="decimal"
+       pattern="[+-]?[0-9]*[.,]?[0-9]+"
+       value="0.42"
+       placeholder="e.g., 0.42" />
         </div>
         <div>
           <label for="n">Sample size N (N &gt; 2)</label>
@@ -109,6 +114,11 @@
   <script>
     const $ = (id) => document.getElementById(id);
     const rEl = $("r"), nEl = $("n"), levelEl = $("level");
+    rEl.addEventListener("blur", () => {
+  const v = parseLocaleFloat(rEl.value);
+  if (Number.isFinite(v)) rEl.value = String(v); // ensures 0.42 is shown
+});
+
     const plugL = $("plug-l"), plugU = $("plug-u");
     const fisherL = $("fisher-l"), fisherU = $("fisher-u");
     const msg = $("message");
@@ -124,7 +134,7 @@
       // Log a custom analytics event (works only if Plausible has loaded)
       if (window.plausible) plausible("compute_clicked");
 
-      const r = Number(rEl.value), n = Number(nEl.value), level = Number(levelEl.value);
+      const r = parseLocaleFloat(rEl.value), n = Number(nEl.value), level = Number(levelEl.value);
       if (!Number.isFinite(r) || Math.abs(r) >= 1) return showError("r must be strictly between −1 and 1.");
       if (!Number.isFinite(n) || !Number.isInteger(n) || n <= 2) return showError("N must be an integer > 2.");
       if (!(level > 0 && level < 100)) return showError("Confidence level must be in (0, 100).");
@@ -156,6 +166,21 @@
     function clearMsg(){ msg.textContent = ""; }
     function fmt(x){ if (!Number.isFinite(x)) return "—"; const ax = Math.abs(x); return ax < 1e-4 ? x.toExponential(2) : x.toFixed(4); }
     function escapeHTML(s){ return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+function parseLocaleFloat(s) {
+  s = String(s ?? "").trim();
+  if (!s) return NaN;
+  const lastDot = s.lastIndexOf(".");
+  const lastComma = s.lastIndexOf(",");
+  if (lastDot !== -1 || lastComma !== -1) {
+    const decIsComma = lastComma > lastDot;
+    const dec = decIsComma ? "," : ".";
+    const thousands = decIsComma ? "." : ",";
+    s = s.replace(new RegExp("\\" + thousands, "g"), "");
+    s = s.replace(dec, ".");
+  }
+  s = s.replace(/\s+/g, "");
+  return Number(s);
+}
 
     // ===== Fisher z (secondary)
     function fisherCI_rho(r, n, alpha=0.05){
@@ -303,5 +328,6 @@
   </script>
 </body>
 </html>
+
 
 
