--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
         <div>
           <label for="r">Sample correlation r (−1 &lt; r &lt; 1)</label>
 <input id="r"
+       name="r_dot"
+       lang="en"
        type="text"
        inputmode="decimal"
+       autocomplete="off"
        pattern="[+-]?[0-9]*[.,]?[0-9]+"
        value="0.42"
        placeholder="e.g., 0.42" />
@@ -328,6 +331,7 @@ function parseLocaleFloat(s) {
   </script>
 </body>
 </html>
+
 
 
 
