--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
     header p { margin:6px 0 0; color:var(--muted); font-size:14px; }
     .panel { background:var(--panel); border:1px solid var(--border); border-radius:10px; padding:16px; }
     label { display:block; font-size:13px; color:var(--muted); margin:0 0 8px; }
-    input[type="number"] { width:100%; padding:10px 12px; border-radius:8px; border:1px solid var(--border); background:#fff; color:var(--ink); }
-    input[type="number"]:focus { outline:2px solid #cfe7f7; border-color:var(--accent); }
+   input[type="number"], input[type="text"] {
+  width: 100%;
+  padding: 10px 12px;
+  border-radius: 8px;
+  border: 1px solid var(--border);
+  background: #fff;
+  color: var(--ink);
+}
+input[type="number"]:focus, input[type="text"]:focus {
+  outline: 2px solid #cfe7f7; border-color: var(--accent);
+}
+
     .controls { display:grid; grid-template-columns:repeat(4,1fr); gap:16px; }
     @media (max-width:880px){ .controls { grid-template-columns:1fr 1fr; } }
     .actions { display:flex; gap:10px; align-items:end; }
@@ -333,6 +343,7 @@ function parseLocaleFloat(s) {
   </script>
 </body>
 </html>
+
 
 
 
